--- a/11_03.ipynb
+++ b/11_03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzMv1Yz/epOhOYN+WStWjf",
+      "authorship_tag": "ABX9TyMXFJWRr9T8e0ClbSXF26P3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 443
+          "height": 313
         },
         "id": "ViXxzirQbXKS",
         "outputId": "2e4e43cf-6fcf-44ff-bcfb-e7263966c13e"
@@ -130,7 +130,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 471
+          "height": 451
         },
         "id": "En-Kuh2Bcpyq",
         "outputId": "7834f9a9-2439-465b-9519-7fff1a482b64"
@@ -182,7 +182,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 315
+          "height": 295
         },
         "id": "1PKHW8uRefdX",
         "outputId": "ae055478-9b90-483a-e8c7-a83e02058f39"
@@ -222,7 +222,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 176
+          "height": 156
         },
         "id": "rtuBAfjVgdzx",
         "outputId": "3e29b83c-a44f-4956-fde3-07c159a9e299"
@@ -247,9 +247,41 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "image_path='quote.jpg'\n",
+        "image = Image.open(image_path)\n",
+        "response=model.generate_content([\"Extract and read the text from this image.\",image])\n",
+        "print(response.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        },
+        "id": "nRNjJcvBhsO7",
+        "outputId": "2c5a7b89-495c-4a35-f4dd-9a3c3ee4655e"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Here's the text from the image:\n",
+            "\n",
+            "FAILURE is not the\n",
+            "opposite of success\n",
+            "it's PART OF\n",
+            "SUCCESS\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "nRNjJcvBhsO7"
+        "id": "P92_b8EmkFrC"
       },
       "execution_count": null,
       "outputs": []
